Fix webpack startup by adding legacy OpenSSL option
Updated the "demo" script in `package.json` to include `NODE_OPTIONS=--openssl-legacy-provider`, ensuring compatibility with environments using legacy OpenSSL. Additionally, updated `package-lock.json` with various dependency changes, enabling better support for development and compatibility with newer libraries.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/index.js",
   "scripts": {
     "prepare": "rm -rf lib && babel src -d lib  --ignore '**/*.less' --copy-files",
-    "demo": "webpack-dev-server"
+    "demo": "NODE_OPTIONS=--openssl-legacy-provider webpack-dev-server"
   },
   "author": "Expression Atlas developers <arrayexpress-atlas@ebi.ac.uk>",
   "collaborators": [
